# src/api/llm/model/chat-text-chat200-response-messages-inner.ts
@@ -1,0 +1,26 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * llm
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { ChatmessageListChatMessageBySession200ResponseMessagesInnerToolCallsInner } from './chatmessage-list-chat-message-by-session200-response-messages-inner-tool-calls-inner';
+
+export interface ChatTextChat200ResponseMessagesInner {
+    'content': string;
+    'role': string;
+    'toolCallId'?: string;
+    'toolCalls'?: Array<ChatmessageListChatMessageBySession200ResponseMessagesInnerToolCallsInner>;
+}
+
