# src/api/llm/model/chat-text-chat200-response.ts
@@ -1,0 +1,24 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * llm
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { ChatTextChat200ResponseMessages } from './chat-text-chat200-response-messages';
+
+export interface ChatTextChat200Response {
+    'conversationId'?: string;
+    'messages'?: ChatTextChat200ResponseMessages;
+}
+
