# src/api/llm/model/chatmessage-list-chat-message-by-session200-response-messages-inner-tool-calls-inner-info.ts
@@ -1,0 +1,24 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * llm
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+export interface ChatmessageListChatMessageBySession200ResponseMessagesInnerToolCallsInnerInfo {
+    'argumentsJson': string;
+    'id': string;
+    'name': string;
+    'requiresConfirmation': boolean;
+    'scope': string;
+}
+
